:fix: fix: Fix `code` overflow

--- a/src/css/output.css
+++ b/src/css/output.css
@@ -32,6 +32,7 @@
 	background-color: #f3f4f4;
 	padding: 0.2em 0.3em;
 	border-radius: 6px;
+	word-break: break-all;
 }
 
 #output pre {
